# RiboTaper

./: Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
scripts/: CCDS_orf_finder.R.in.in  NONCCDS_orf_finder.R.in.in  ORF_final_results.R.in  P_sites_RNA_sites_calc.bash.in  Ribotaper.sh.in.in  Ribotaper_ORF_find.sh.in.in  analyze_multi_clust.bash.in  annotate_exons.R.in.in  create_annotations_files.bash.in.in  create_metaplots.bash.in.in  create_metaplots_nodo.bash.in  create_protein_db.R.in  create_tracks.bash.in  genes_coor.R.in  gtf_to_start_stop_tr.R.in  include_multi_nomerge.R.in  metag.R.in  quality_check.R.in  tracks_analysis.R.in.in  write_startstops.R.in
